[package]
name = "abyss-node"
version = "0.1.0"
edition = "2021"
authors = ["Abysses Team"]
description = "Radically decentralized darkweb browser node"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.54", features = ["quic", "noise", "kad", "mdns", "identify", "ping", "tcp", "yamux", "relay", "dcutr", "autonat", "gossipsub"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = { version = "0.10", features = ["stream"] }
blake3 = "1.5"
rand = "0.8"
reed-solomon-erasure = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
tokio-tungstenite = "0.23"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.22"
lru = "0.12"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "abyss-node"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
